plugins {
    id 'myproject.java-conventions'
}

group 'com.nosto.beanie'
version '3.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    withSourcesJar()
    withJavadocJar()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.8.6'

    testCompileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.8.6'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0'
    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.11.0'

    errorprone group: 'com.uber.nullaway', name: 'nullaway', version: '0.11.2'
    errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.30.0'

    spotbugsPlugins group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: '1.13.0'
}

publishing {
    repositories {
        maven {
            name = "github"
            url = uri("https://maven.pkg.github.com/nosto/beanie")
            credentials(PasswordCredentials)
        }
    }
    publications {
        create("mavenJava", MavenPublication) {
            from components.java

            pom {
                name = 'Beanie'
                description = 'A simple library to sanity-check your bean ser-deser'
                url = 'https://github.com/nosto/beanie'
                licenses {
                    license {
                        name = 'The Apache Software License, Version 2.0'
                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                        distribution = 'repo'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/nosto/beanie.git'
                    developerConnection = 'scm:git:ssh://github.com/nosto/beanie.git'
                    url = 'https://github.com/nosto/beanie'
                }
                issueManagement {
                    system = "Github"
                    url = "https://github.com/nosto/beanie/issues"
                }
            }
        }
    }
}
